# python_devcontainer_template

./: .gitattributes  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/workflows/: prerelease.yml  push_branch.yml  release.yml
