[tool.poetry]
name = "template"
version = "0.1.0"
description = "A template poetry project"
authors = ["Tony Holroyd <testingtony12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.poetry.scripts]
my_package_cli = 'my_package.console:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"